完成系统的计划功能与接口对接

--- a/src/assets/styles/antd-mytheme.less
+++ b/src/assets/styles/antd-mytheme.less
@@ -1,8 +1,8 @@
 @import '~ant-design-vue/dist/antd.less'; // 引入官方提供的 less 样式入口文件
 @primary-color: #027db4; // 全局主色
 @link-color: #CCCCFF; // 链接色
-@success-color: #CCFFCC; // 成功色
-@warning-color: #FFCC99; // 警告色
+@success-color: #009966; // 成功色
+@warning-color: #FF9933; // 警告色
 @error-color: #da5151; // 错误色
 @font-size-base: 14px; // 主字号
 @heading-color: rgba(0, 0, 0, 0.85); // 标题色
